<resources>
    <string name="app_name">YahooTickerFeed</string>
    <string name="action_refresh">Refresh</string>
    <string name="button">Refresh</string>
    <string name="ascSymbol">Ascending</string>
    <string name="ascPrice">Ascending</string>
    <string name="ascDate">Ascending</string>
    <string name="Price">Last Trade Price</string>
    <string name="symbol">Symbol</string>
    <string name="Date">Div Pay Date</string>
    <string name="desSymbol">Descending</string>
    <string name="desPrice">Descending</string>
    <string name="desDate">Descending</string>
</resources>
