<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kelvin.yahootickerfeed.MainActivity"
    tools:showIn="@layout/activity_main">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ascPrice"
        android:id="@+id/button2"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ascSymbol"
        android:id="@+id/button1"
        android:layout_above="@+id/linearLayout"
        android:layout_toLeftOf="@+id/button2"
        android:layout_marginRight="30dp"
        android:textSize="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ascDate"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_marginLeft="30dp"
        android:textSize="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/button2"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_weight="1" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView2"
            android:layout_weight="1" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView3"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Price"
        android:id="@+id/textView2"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/symbol"
        android:id="@+id/textView1"
        android:layout_alignBottom="@id/textView2"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_marginRight="35dp"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Date"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:textSize="16dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desPrice"
        android:id="@+id/button5"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textSize="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desSymbol"
        android:id="@+id/button4"
        android:layout_alignBottom="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:layout_marginRight="30dp"
        android:textSize="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desDate"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:layout_marginLeft="30dp"
        android:textSize="10dp" />

</RelativeLayout>
